package edu.fiuba.algo3.modeloNico.Celdas;

public interface Construccion{
	
}