package edu.fiuba.algo3.modeloNico.Defensas;

public interface Defensa extends Estructura{
    
}
