package edu.fiuba.algo3.modeloNico.Defensas;


public class TorrePlateada implements Defensa {
    public TorrePlateada() {

    }

    //@Override
    //public int turnoParaContruir() {
        //return 2;
    //}

    @Override
    public int costo() {
        return 20;
    }
}
